# infrared

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.aws/: task-definition.json
.github/workflows/: aws.yml
api/: conftest.py  entrypoint.sh  manage.py  pytest.ini  run_tests.sh
api/api/: asgi.py  settings.py  urls.py  wsgi.py
api/api/settings/: base.py  local.py  storage.py
api/infrared/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api/infrared/migrations/: 0001_initial.py
api/infrared/tests/: tests.py
back/: Dockerfile  pyproject.toml
